--- a/todo/src/app/list-todos/list-todos.component.html
+++ b/todo/src/app/list-todos/list-todos.component.html
@@ -1,11 +1,15 @@
 <h1>My Todo's</h1>
+<div class="alert alert-success" *ngIf="message">{{ message }}</div>
+
 <div class="container">
   <table class="table">
     <thead>
       <tr>
         <th>Description</th>
         <th>Target Date</th>
-        <th>Is Complete</th>
+        <th>Is Complete?</th>
+        <th>Update</th>
+        <th>Delete</th>
       </tr>
     </thead>
     <tbody>
@@ -13,7 +17,20 @@
         <td>{{ todo.description }}</td>
         <td>{{ todo.targetDate | date | uppercase }}</td>
         <td>{{ todo.done }}</td>
+        <td>
+          <button (click)="updateTodo(todo.id)" class="btn btn-success">
+            Update
+          </button>
+        </td>
+        <td>
+          <button (click)="deleteTodo(todo.id)" class="btn btn-warning">
+            Delete
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
+  <div class="row">
+    <button (click)="addTodo()" class="btn btn-success">Save</button>
+  </div>
 </div>
