--- a/todo/src/app/login/login.component.html
+++ b/todo/src/app/login/login.component.html
@@ -10,6 +10,7 @@
     Password:
     <input type="password" name="password" [(ngModel)]="password" />
 
-    <button (click)="onLogin()" class="btn btn-success">Login</button>
+    <!-- <button (click)="onLogin()" class="btn btn-success">Login</button> -->
+    <button (click)="onBasicLogin()" class="btn btn-success">Login</button>
   </div>
 </div>
