--- a/todo/src/app/list-todos/list-todos.component.html
+++ b/todo/src/app/list-todos/list-todos.component.html
@@ -5,6 +5,7 @@
   <table class="table">
     <thead>
       <tr>
+        <th>id</th>
         <th>Description</th>
         <th>Target Date</th>
         <th>Is Complete?</th>
@@ -14,6 +15,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let todo of todos">
+        <td>{{ todo.id }}</td>
         <td>{{ todo.description }}</td>
         <td>{{ todo.targetDate | date | uppercase }}</td>
         <td>{{ todo.done }}</td>
