--- a/todo/src/app/list-todos/list-todos.component.html
+++ b/todo/src/app/list-todos/list-todos.component.html
@@ -2,7 +2,58 @@
 <div class="alert alert-success" *ngIf="message">{{ message }}</div>
 
 <div class="container">
-  <table class="table">
+  <div class="row p-2 pe-2 justify-content-end">
+    <button (click)="addTodo()" class="btn btn-success btn-sm">Add New</button>
+  </div>
+  <table mat-table [dataSource]="todos" class="mat-elevation-z8">
+    <ng-container matColumnDef="Index">
+      <th mat-header-cell *matHeaderCellDef>Index</th>
+      <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Description</th>
+      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+    </ng-container>
+    <ng-container matColumnDef="targetDate">
+      <th mat-header-cell *matHeaderCellDef>Target Date</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.targetDate | date }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="done">
+      <th mat-header-cell *matHeaderCellDef>Is Complete?</th>
+      <td mat-cell *matCellDef="let element">{{ element.done }}</td>
+    </ng-container>
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let element">
+        <button
+          mat-button
+          class="btn btn-primary btn-sm"
+          (click)="updateTodo(element.id)"
+        >
+          Edit
+        </button>
+        <span class="m-1"></span>
+        <button
+          mat-button
+          color="warn"
+          class="btn btn-danger btn-sm"
+          (click)="openDialog(element.id)"
+        >
+          Delete
+        </button>
+      </td>
+    </ng-container>
+    <!-- Header row -->
+    <tr mat-header-row *matHeaderRowDef="tableColumn"></tr>
+    <!-- Data rows -->
+    <tr mat-row *matRowDef="let row; columns: tableColumn"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+  </mat-paginator>
+  <!-- <table class="table">
     <thead>
       <tr>
         <th>id</th>
@@ -31,8 +82,5 @@
         </td>
       </tr>
     </tbody>
-  </table>
-  <div class="row">
-    <button (click)="addTodo()" class="btn btn-success">Save</button>
-  </div>
+  </table> -->
 </div>
