--- a/todo/src/app/menu/menu.component.html
+++ b/todo/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div><a href="#" class="navbar-brand">Tranv</a></div>
+    <div><a class="navbar-brand" style="color: white">Tranv</a></div>
     <ul class="navbar-nav">
       <li>
         <a
