--- a/todo/src/app/app.component.html
+++ b/todo/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 
-<div class="container">
+<div class="container pb-5">
   <router-outlet></router-outlet>
 </div>
-
+<div class="container"></div>
 <app-footer></app-footer>
