--- a/todo/src/app/list-todos/list-todos.component.html
+++ b/todo/src/app/list-todos/list-todos.component.html
@@ -8,30 +8,36 @@
   <table mat-table [dataSource]="todos" class="mat-elevation-z8">
     <ng-container matColumnDef="Index">
       <th mat-header-cell *matHeaderCellDef>Index</th>
-      <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+      <td mat-cell *matCellDef="let todo; let i = index">{{ i + 1 }}</td>
     </ng-container>
 
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef>Description</th>
-      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      <td mat-cell *matCellDef="let todo">{{ todo.description }}</td>
     </ng-container>
     <ng-container matColumnDef="targetDate">
       <th mat-header-cell *matHeaderCellDef>Target Date</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.targetDate | date }}
+      <td mat-cell *matCellDef="let todo">
+        {{ todo.targetDate | date : "dd/MM/YYYY" }}
       </td>
     </ng-container>
     <ng-container matColumnDef="done">
       <th mat-header-cell *matHeaderCellDef>Is Complete?</th>
-      <td mat-cell *matCellDef="let element">{{ element.done }}</td>
+      <td
+        mat-cell
+        *matCellDef="let todo"
+        [ngClass]="todo.done ? 'text-success' : 'text-danger'"
+      >
+        {{ todo.done ? "Done" : "Not Done" }}
+      </td>
     </ng-container>
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let todo">
         <button
           mat-button
           class="btn btn-primary btn-sm"
-          (click)="updateTodo(element.id)"
+          (click)="updateTodo(todo.id)"
         >
           Edit
         </button>
@@ -40,15 +46,15 @@
           mat-button
           color="warn"
           class="btn btn-danger btn-sm"
-          (click)="openDialog(element.id)"
+          (click)="openDialog(todo.id)"
         >
           Delete
         </button>
       </td>
     </ng-container>
-    <!-- Header row -->
+
     <tr mat-header-row *matHeaderRowDef="tableColumn"></tr>
-    <!-- Data rows -->
+
     <tr mat-row *matRowDef="let row; columns: tableColumn"></tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
