--- a/todo/src/app/list-todos/list-todos.component.html
+++ b/todo/src/app/list-todos/list-todos.component.html
@@ -57,7 +57,7 @@
 
     <tr mat-row *matRowDef="let row; columns: tableColumn"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+  <mat-paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons>
   </mat-paginator>
   <!-- <table class="table">
     <thead>
