--- a/todo/src/app/list-todos/list-todos.component.html
+++ b/todo/src/app/list-todos/list-todos.component.html
@@ -5,18 +5,38 @@
   <div class="row p-2 pe-2 justify-content-end">
     <button (click)="addTodo()" class="btn btn-success btn-sm">Add New</button>
   </div>
-  <table mat-table [dataSource]="todos" class="mat-elevation-z8">
+  <table
+    mat-table
+    [dataSource]="todos"
+    matSort
+    (matSortChange)="onSort($event)"
+    class="mat-elevation-z8"
+  >
     <ng-container matColumnDef="Index">
-      <th mat-header-cell *matHeaderCellDef>Index</th>
+      <th mat-header-cell *matHeaderCellDef [style.width.px]="50">Index</th>
       <td mat-cell *matCellDef="let todo; let i = index">{{ i + 1 }}</td>
     </ng-container>
 
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef>Description</th>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        [style.width.px]="550"
+      >
+        Description
+      </th>
       <td mat-cell *matCellDef="let todo">{{ todo.description }}</td>
     </ng-container>
     <ng-container matColumnDef="targetDate">
-      <th mat-header-cell *matHeaderCellDef>Target Date</th>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        [style.width.px]="150"
+      >
+        Target Date
+      </th>
       <td mat-cell *matCellDef="let todo">
         {{ todo.targetDate | date : "dd/MM/YYYY" }}
       </td>
