--- a/todo/src/app/login/login.component.html
+++ b/todo/src/app/login/login.component.html
@@ -1,9 +1,9 @@
 <H1>Login!</H1>
 
 <div class="container">
-  <div class="alert alert-warning" *ngIf="invalidLogin">
+  <!-- <div class="alert alert-warning" *ngIf="invalidLogin">
     {{ errorMessage }}
-  </div>
+  </div> -->
   <div>
     User name:
     <input type="text" name="username" [(ngModel)]="username" />
