--- a/todo/src/app/list-todos/list-todos.component.html
+++ b/todo/src/app/list-todos/list-todos.component.html
@@ -79,6 +79,7 @@
     <tr mat-row *matRowDef="let row; columns: tableColumn"></tr>
   </table>
   <mat-paginator
+    showFirstLastButtons
     [length]="totalItems"
     [pageSizeOptions]="[5, 10, 15, 20]"
     [pageIndex]="requestPayload.pageIndex"
